kubernetes/applications/ittools/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ittools
  namespace: apps
spec:
  selector:
    matchLabels:
      app: ittools
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: ittools
    spec:
      containers:
        - name: ittools
          image: ghcr.io/corentinth/it-tools:2024.10.22-7ca5933@sha256:8b8128748339583ca951af03dfe02a9a4d7363f61a216226fc28030731a5a61f
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 50m
              memory: 64Mi
