kubernetes/applications/ittools/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ittools
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: ittools
